Build character nickname generator

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>오늘 뭐 하지?</title>
+  <title>캐릭터 닉네임 생성기</title>
   <link href="/style.css" rel="stylesheet">
 </head>
 <body>
